Буква ё и запятые после "по умолчанию"

--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/DocumentPropertyDirection_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/DocumentPropertyDirection_EN.adoc
@@ -28,4 +28,4 @@ public enum DocumentPropertyDirection
 
 == Заметки
 
-Для документов в формате MS Office в системе {dv} имеется ряд дополнительных возможностей. В частности, при вложении файлов формата MS Office в карточку Документ пользовательского вида, допускается копирование свойств файла в карточку и свойств карточки в файл. Данная операция в рамках системы {dv} называется Синхронизация свойств полей.
+Для документов в формате Microsoft Office в системе {dv} имеется ряд дополнительных возможностей. В частности, при вложении файлов формата Microsoft Office в карточку Документ пользовательского вида, допускается копирование свойств файла в карточку и свойств карточки в файл. Данная операция в рамках системы {dv} называется Синхронизация свойств полей.
