--- a/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/TaskRoutingType_EN.adoc
+++ b/modules/BackOffice-ObjectModel-Services-Entities/pages/Entities/KindSetting/TaskRoutingType_EN.adoc
@@ -19,7 +19,7 @@ public enum TaskRoutingType
 |Имя члена |Описание
 |`ByDefault` |По умолчанию.
 |`OnlineTask` |Онлайн задание.
-|`OutlookTask` |Задача MS Outlook.
+|`OutlookTask` |Задача Microsoft Outlook.
 |`TaskLink` |Ссылка на задание.
 |`DescriptionLetter` |Письмо с описанием задания.
 |===
