--- a/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.SyncPropertiesToFile_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IDocumentService/pages/IDocumentService.SyncPropertiesToFile_MT.adoc
@@ -45,7 +45,7 @@ propertySettings:::
 
 Параметры синхронизации полей карточки и свойств основного документа задаются в _Справочнике видов карточек_.
 
-Синхронизация производится только с файлами MS Office.
+Синхронизация производится только с файлами Microsoft Office.
 
 == Примеры
 
