--- a/modules/BackOffice-ObjectModel-Services-IKindService/pages/IKindService.GetCardDefaultLocationDescription_MT.adoc
+++ b/modules/BackOffice-ObjectModel-Services-IKindService/pages/IKindService.GetCardDefaultLocationDescription_MT.adoc
@@ -25,4 +25,4 @@ location:::
 
 == Заметки
 
-Размещение по умолчанию, для создаваемого экземпляра карточки определённого вида, регулируется в Справочнике видов карточек.
+Размещение по умолчанию для создаваемого экземпляра карточки определённого вида, регулируется в Справочнике видов карточек.
