--- a/modules/appendix/pages/controls/docsvision/CommunicativeChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/CommunicativeChooseBox.adoc
@@ -12,7 +12,7 @@ image::ROOT:communicative-choose-box.png[Элемент управления "Co
 
 [NOTE]
 ====
-Связь с сотрудником возможна только при наличии на компьютере пользователя установленного MS Lynс.
+Связь с сотрудником возможна только при наличии на компьютере пользователя установленного Microsoft Lynс.
 ====
 
 == Свойства
