--- a/modules/appendix/pages/controls/docsvision/CommunicativeMultiChooseBox.adoc
+++ b/modules/appendix/pages/controls/docsvision/CommunicativeMultiChooseBox.adoc
@@ -13,7 +13,7 @@ image::ROOT:communicative-multi-choose-box.png[Элемент управлени
 
 [NOTE]
 ====
-Связь с сотрудником возможна только при наличии на компьютере пользователя установленного MS Lynс.
+Связь с сотрудником возможна только при наличии на компьютере пользователя установленного Microsoft Lynс.
 ====
 
 == Свойства:
