--- a/modules/appendix/pages/controls/docsvision/Preview.adoc
+++ b/modules/appendix/pages/controls/docsvision/Preview.adoc
@@ -20,7 +20,7 @@
 
 * `*PreviewCompleted*` -- событие вызывается после отображения пользователю содержимого файла (используется метод `ShowPreview`).
 
-.Пример использования `Preview` для отображением содержимого документа MS Word:
+.Пример использования `Preview` для отображения содержимого документа Microsoft Word:
 [source,csharp]
 ----
 private void ShowButton_Click(object sender, EventArgs e)
