--- a/modules/schemas/pages/release/BackOffice/CardTask.adoc
+++ b/modules/schemas/pages/release/BackOffice/CardTask.adoc
@@ -61,7 +61,7 @@
 * Нормальная = 1.
 * Высокая = 2.
 |`StartTaskDate` |Дата отправки задания |`datetime` | |
-|`OutlookTask` |Задание MS Outlook` |`unistring` |256 |
+|`OutlookTask` |Задание Microsoft Outlook` |`unistring` |256 |
 |`CreateMessages` |Сформировать сообщения для задания |`bool` | |
 |`Number` |Номер |`refid` | |
 |`ResponsibleTaskId` |Задание ответственного исполнителя |`refcardid` | a|
