--- a/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
+++ b/modules/schemas/pages/release/TakeOffice/WorkflowTask.adoc
@@ -46,7 +46,7 @@
 |`ExpectedStartDatePID` |Параметр ожидаемой даты начала |`refid` | |
 |`ExpectedEndDate` |Ожидаемая дата окончания |`datetime` | |
 |`ExpectedEndDatePID` |Параметр ожидаемой даты окончания |`refid` | |
-|`CreateOutlookTask` |Создать задание MS Outlook` |`bool` | |
+|`CreateOutlookTask` |Создать задание Microsoft Outlook` |`bool` | |
 |`Reminder` |Напомнить за |`int` | |
 |`ReminderPID` |Параметр напомнить за |`refid` | |
 |`FilesID` |Список файлов |`refcardid` | a|
@@ -369,7 +369,7 @@
 * Делегировано = 12.
 * Возврат с делегирования = 13.
 * Возвращено с делегирования = 14.
-|`OutlookTaskID` |ID задания MS Outlook` |`unistring` |256 |
+|`OutlookTaskID` |ID задания Microsoft Outlook` |`unistring` |256 |
 |`ShortcutID` |Ярлык |`refid` | |
 |`ResponseRequired` |Требуется возврат |`bool` | |
 |`CanReject` |Право на отказ |`bool` | |
