--- a/modules/solutions/pages/cards/card-component/controls.adoc
+++ b/modules/solutions/pages/cards/card-component/controls.adoc
@@ -66,7 +66,7 @@
 +
 * *Вспомогательные*:
 +
-** `CommunicatorControl` -- элемент управления, отображающий статус пользователя в MS Office Communicator/Lync, позволяющий осуществить сеанс связи с пользователем (звонок, отправка мгновенного сообщения, отправка электронной почты). Используется в `CommunicativeChooseBox` и `CommunicativeMultiChooseBox`.
+** `CommunicatorControl` -- элемент управления, отображающий статус пользователя в Microsoft Office Communicator/Lync, позволяющий осуществить сеанс связи с пользователем (звонок, отправка мгновенного сообщения, отправка электронной почты). Используется в `CommunicativeChooseBox` и `CommunicativeMultiChooseBox`.
 ** `Preview` -- элемент просмотра содержимого файла. Используются средства предпросмотра, установленные в операционной системе (аналогично Microsoft Outlook).
 
 [IMPORTANT]
