--- a/modules/samples/pages/components/command-plugin.adoc
+++ b/modules/samples/pages/components/command-plugin.adoc
@@ -4,7 +4,7 @@
 
 Для реализации расширения {wincl}а требуется:
 
-. Создать проект (MS Visual Studio) типа "Class Library".
+. Создать проект (Microsoft Visual Studio) типа "Class Library".
 . Создайте элемент управления "User Control" (Windows Forms).
 . Измените базовый класс элемента управления с UserControl на `xref:Platform-WinForms:NavExtension_CL.adoc[NavExtension]`.
 . Переопределить необходимые методы и свойства базового класса (см. пример).
